fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi-deployment
spec:
  selector:
    matchLabels:
      app: fastapi-deployment
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fastapi-deployment
    spec:
    containers:
        - name: fastapi-deployment
          image: ranjithakj/fastapi:latest
          ports:
          - containerPort: 5000
