fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: fastapi.nginx-demo-ranjitha.ddns-ip.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: fastapi-service
              port:
                number: 5000
